<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My First App</string>
    <string name="start_button">Start</string>
    <string name="seconds_off">Seconds Off\n\n00:00</string>
    <string name ="seconds_on">Seconds On\n\n00:00</string>
    <string name="rounds">Rounds\n\n0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name = "preferences">Preferences</string>
    <string name ="splashs">THIS IS AN IMAGE</string>

    <string name = "one">1</string>
    <string name = "two">2</string>
    <string name = "three">3</string>
    <string name = "four">4</string>
    <string name = "five">5</string>
    <string name = "six">6</string>
    <string name = "seven">7</string>
    <string name = "eight">8</string>
    <string name = "nine">9</string>
    <string name = "zero">0</string>
    <string name = "clear">CLEAR</string>
    <string name = "ok">OK</string>

    <string name="timePassedTitle">Time Passed</string>
    <string name="timeRemainingTitle">Time Remaining</string>

    <string name ="roundSettings">Round Settings</string>
    <string name="lastRestSummary">Include the rest time in the final round</string>
    <string name="lastRest">Last Rest</string>
    <string name="endOfSet">3 Second Warning</string>
    <string name="endOfSetSummary">Play sound on last 3 seconds of set</string>



</resources>