<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainmenu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:foreground="@drawable/dimbackground"
    android:background="@drawable/main_background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/splash"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:contentDescription="@string/splashs"
            android:src="@drawable/rocklee"
            />
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:background="?attr/colorPrimary"
            app:titleTextColor="#ffffff"
            app:title="Fancy Timer"
            />

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/countDown"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:background="@drawable/time_background"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/setMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                app:layout_marginTopPercent = "5%"
                android:text="READY"
                android:textSize = "60dp"
                android:alpha="0.25"
                />

            <TextView
                android:id="@+id/setTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize = "110dp"
                android:textColor = "#000000"
                android:text="00:00"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                />

            <TextView
                android:id="@+id/timePassedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_above="@+id/timePassed"
                app:layout_marginLeftPercent="2%"
                android:text="@string/timePassedTitle"/>

            <TextView
                android:id="@+id/timePassed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                app:layout_marginLeftPercent="2%"
                app:layout_marginBottomPercent = "2%"

                android:text="00:00"/>

            <TextView
                android:id="@+id/timeRemainingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_above="@+id/timeRemaining"
                android:layout_alignParentRight="true"
                app:layout_marginRightPercent="2%"
                android:text="@string/timeRemainingTitle"/>

            <TextView
                android:id="@+id/timeRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                app:layout_marginRightPercent="2%"
                app:layout_marginBottomPercent = "2%"

                android:text="00:00"/>

        </android.support.percent.PercentRelativeLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/roundsCount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/time_background"
            >

            <TextView
                android:id="@+id/roundsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:text="Round"
                app:layout_marginTopPercent="2%"
                style="@android:style/TextAppearance.Medium"
                />

            <TextView
                android:id="@+id/roundsPassed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize = "60dp"
                android:textColor = "#000000"
                android:text=""
                style="@android:style/TextAppearance.DeviceDefault.Medium"

                />

        </android.support.percent.PercentRelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>

    <LinearLayout
        android:layout_width = "fill_parent"
        android:layout_height ="0dp"
        android:layout_weight ="1.9"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/rounds"
            android:text="@string/rounds"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:background="@drawable/button"/>
        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"/>

        <Button
            android:id="@+id/seconds_on"
            android:text="@string/seconds_on"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:background="@drawable/button"/>

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"/>

        <Button
            android:id="@+id/seconds_off"
            android:text="@string/seconds_off"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:background="@drawable/button"
            />
    </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>

        <Button
            android:id="@+id/start_button"
            android:text="@string/start_button"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:background="@drawable/start_button"
            android:layout_weight="1.1"
            />

        <LinearLayout
            android:id="@+id/pauseStop"
            android:layout_width = "fill_parent"
            android:layout_height ="0dp"
            android:layout_weight ="1.1"
            android:orientation="horizontal"
            android:visibility="gone"
            >

                <Button
                    android:id="@+id/pause"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight = "0.7"
                    android:text="Pause"
                    android:background="@drawable/pause_button"
                    />

                <Button
                    android:id="@+id/resume"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight = "0.7"
                    android:text="Resume"
                    android:background="@drawable/resume_button"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.003"/>

                <Button
                    android:id="@+id/stop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight = "0.3475"
                    android:text="Stop"
                    android:background="@drawable/stop_button"
                    />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>

    <!--http://stackoverflow.com/questions/15715324/increase-the-font-size-based-on-the-size-of-the-device-->